Bug 191221 - ACPI Warning: Table ffffffffbb461d20, Validation count is zero before decrement
Summary: ACPI Warning: Table ffffffffbb461d20, Validation count is zero before decrement
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lv Zheng
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-26 18:33 UTC by Cristian Aravena Romero
Modified: 2017-01-06 04:50 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.10.0-041000rc1-generic
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg_4.10.0-041000rc1-generic.txt (56.50 KB, text/plain)
2016-12-26 18:33 UTC, Cristian Aravena Romero
Details
[PATCH] Debugging table mapping counting (726 bytes, patch)
2016-12-28 08:13 UTC, Lv Zheng
Details | Diff
[PATCH] Add sanity check to avoid unexpected error messages reported from acpi_tb_put_table() (935 bytes, patch)
2017-01-03 07:13 UTC, Lv Zheng
Details | Diff

Description Cristian Aravena Romero 2016-12-26 18:33:25 UTC
Created attachment 248611 [details]
dmesg_4.10.0-041000rc1-generic.txt

[    0.000000] ACPI Warning: Table ffffffffbb461d20, Validation count is zero before decrement
Comment 1 Lv Zheng 2016-12-26 23:55:08 UTC
Do you see real any real problem?
This message is not harmful, just mentioning that some table refcnting is not balanced (like old way).

Thanks
Lv
Comment 2 Lv Zheng 2016-12-28 08:13:14 UTC
Created attachment 248801 [details]
[PATCH] Debugging table mapping counting

Please apply this patch and rebuild the kernel.
Boot the kernel and upload the dmesg output here.

Thanks
Lv
Comment 3 Lv Zheng 2017-01-03 02:05:22 UTC
Ping...
Comment 4 Lv Zheng 2017-01-03 07:13:23 UTC
Created attachment 249821 [details]
[PATCH] Add sanity check to avoid unexpected error messages reported from acpi_tb_put_table()

Or you can apply this patch first to see if this can simply be stopped by the sanity check.

Thanks
Lv
Comment 5 Lv Zheng 2017-01-06 04:50:34 UTC
Hi,

Rafael has posted a fix fixing the caller side:
https://git.kernel.org/cgit/linux/kernel/git/rafael/linux-pm.git/commit/?h=linux-next&id=696c7f8e0373

I'm pushing the callee side fix to the ACPICA upstream:
https://github.com/acpica/acpica/pull/200/

So let me mark this bug as RESOLVED.

Thanks
Lv

Note You need to log in before you can comment on or make changes to this bug.